environments/dev/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contactfis-ingress
  namespace: contactfis-dev
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:   
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: contacts
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
